fix(showcase): avoid blue button color on iOS 15 (#884)

--- a/src/angular-core/styles/typography/_reset.scss
+++ b/src/angular-core/styles/typography/_reset.scss
@@ -58,6 +58,7 @@
     font-family: inherit;
     font-size: inherit;
     line-height: inherit;
+    color: inherit;
   }
 
   table {
